// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ProjectSlideshow renders correctly for projects with a statement 1`] = `
<div>
  <div
    class="relative h-[calc(100vh-150px)] md:h-[100vh]"
  >
    <div
      class="absolute top-1/2 translate-y-[-50%] md:left-1/2 md:translate-x-[-50%]"
    >
      <div
        class="absolute top-0 bottom-0 left-0 right-1/2 cursor-w-resize"
        data-testid="left-side"
      />
      <div
        class="absolute top-0 bottom-0 right-0 left-1/2 cursor-e-resize"
        data-testid="right-side"
      />
      <img
        alt="My First Project - 01"
        class="max-h-[calc(100vh-150px)] sm:max-h-[100vh] text-center hidden w-auto h-auto md:max-w-[70vw] md:max-h-[90vh]"
        fetchpriority="low"
        height="2560"
        loading="lazy"
        src="/photos/my-first-project/1280w/01.jpg"
        width="2560"
      />
      <img
        alt="My First Project - 02"
        class="max-h-[calc(100vh-150px)] sm:max-h-[100vh] text-center hidden w-auto h-auto md:max-w-[70vw] md:max-h-[90vh]"
        fetchpriority="low"
        height="2560"
        loading="lazy"
        src="/photos/my-first-project/1280w/02.jpg"
        width="2560"
      />
      <img
        alt="My First Project - 03"
        class="max-h-[calc(100vh-150px)] sm:max-h-[100vh] text-center block w-auto h-auto md:max-w-[70vw] md:max-h-[90vh]"
        fetchpriority="high"
        height="2560"
        loading="eager"
        src="/photos/my-first-project/1280w/03.jpg"
        width="2560"
      />
    </div>
    <div
      class="group text-grey/80 select-none"
    >
      <h2
        class="fixed left-md bottom-md z-20 text-xs uppercase cursor-help"
      >
        Statement
      </h2>
      <div
        class="fixed left-0 bottom-md z-10 right-0 mb-md p-md bg-transparant-white invisible opacity-0 ease-linear duration-100 translate-y-[50px] group-hover:visible group-hover:translate-y-0 group-hover:opacity-100 md:w-[500px]"
      >
        <h3
          class="mb-sm text-sm"
        >
          My First Project
        </h3>
        <div
          class="space-y-sm text-xs text-justify"
        >
          <p>
            The 
            <em>
              statement
            </em>
             for the 
            <em>
              project
            </em>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProjectSlideshow renders correctly for projects with captions 1`] = `
<div>
  <div
    class="relative h-[calc(100vh-150px)] md:h-[100vh]"
  >
    <div
      class="absolute top-1/2 translate-y-[-50%] md:left-1/2 md:translate-x-[-50%]"
    >
      <div
        class="absolute top-0 bottom-0 left-0 right-1/2 cursor-w-resize"
        data-testid="left-side"
      />
      <div
        class="absolute top-0 bottom-0 right-0 left-1/2 cursor-e-resize"
        data-testid="right-side"
      />
      <img
        alt="Project without a statement - 01"
        class="max-h-[calc(100vh-150px)] sm:max-h-[100vh] text-center hidden w-auto h-auto md:max-w-[70vw] md:max-h-[90vh]"
        fetchpriority="low"
        height="2560"
        loading="lazy"
        src="/photos/no-statement/1280w/01.jpg"
        width="2560"
      />
      <img
        alt="Project without a statement - 02"
        class="max-h-[calc(100vh-150px)] sm:max-h-[100vh] text-center hidden w-auto h-auto md:max-w-[70vw] md:max-h-[90vh]"
        fetchpriority="low"
        height="2560"
        loading="lazy"
        src="/photos/no-statement/1280w/02.jpg"
        width="2560"
      />
      <img
        alt="Project without a statement - 03"
        class="max-h-[calc(100vh-150px)] sm:max-h-[100vh] text-center block w-auto h-auto md:max-w-[70vw] md:max-h-[90vh]"
        fetchpriority="high"
        height="2560"
        loading="eager"
        src="/photos/no-statement/1280w/03.jpg"
        width="2560"
      />
      <img
        alt="Project without a statement - 04"
        class="max-h-[calc(100vh-150px)] sm:max-h-[100vh] text-center hidden w-auto h-auto md:max-w-[70vw] md:max-h-[90vh]"
        fetchpriority="low"
        height="2560"
        loading="lazy"
        src="/photos/no-statement/1280w/04.jpg"
        width="2560"
      />
    </div>
  </div>
</div>
`;
